# medical-llm-eval

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: base.yaml  eval.yaml  models.yaml
data/eval_set/: annotation_guidelines.md  eval_samples_template.csv
data/processed/: eval_samples.csv
medical_llm_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: 01_dataset_overview.ipynb  02_baseline_vs_rag.ipynb  03_error_analysis.ipynb
reports/: deployment_risk_onepager.md  final_report.md
reports/tables/: error_counts_baseline.csv  error_counts_baseline_test.csv  error_counts_enhanced.csv  error_counts_enhanced_test.csv  error_taxonomy_reference.csv  metrics_baseline.csv  metrics_baseline_test.csv  metrics_enhanced.csv  metrics_enhanced_test.csv  metrics_summary.csv  per_sample_eval_baseline.csv  per_sample_eval_baseline_test.csv  per_sample_eval_enhanced.csv  per_sample_eval_enhanced_test.csv  predictions_baseline.csv  predictions_enhanced.csv  run_metadata_baseline.json  run_metadata_enhanced.json  slice_metrics.csv  slice_metrics_baseline.csv  slice_metrics_baseline_test.csv  slice_metrics_enhanced.csv  slice_metrics_enhanced_test.csv
scripts/: run_all.sh  run_baseline.sh  run_eval.sh  run_rag.sh
src/: __init__.py
src/analysis/: __init__.py  error_analysis.py  slice_analysis.py
src/data/: __init__.py  build_eval_set.py  (+2 more)
tests/: test_data_schema.py  test_evaluator_split.py  test_metrics.py  test_no_label_leakage.py  test_provider_client.py  test_rag_setup.py  test_safety_rules.py  test_stratified_split_dedup.py
(+21 files in other folders)
